--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "token": "ODI0NDA4MzI4MTIxNjE0Mzg2.YFu8Fg.lFl1mc-TF7OomhzR258xfY8atrQ",
-    "color": "A7142B",
+    "token": "",
+    "color": "",
 
-    "guildId": "805126125277806623",
-    "modParent": "883478054272397342"
+    "guildId": "",
+    "modParent": ""
 }
